Fixed install / setup

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -10,9 +10,28 @@ RUN if [ "${REINSTALL_CMAKE_VERSION_FROM_SOURCE}" != "none" ]; then \
     fi \
     && rm -f /tmp/reinstall-cmake.sh
 
-# [Optional] Uncomment this section to install additional vcpkg ports.
-# RUN su vscode -c "${VCPKG_ROOT}/vcpkg install <your-port-name-here>"
-
 # [Optional] Uncomment this section to install additional packages.
-# RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-#     && apt-get -y install --no-install-recommends <your-package-list-here>
+RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
+    && apt-get -y install --no-install-recommends \
+    libx11-dev \
+    libxcomposite-dev \
+    libxext-dev \
+    libxinerama-dev \
+    libxrandr-dev \
+    libxcursor-dev \
+    libxrender-dev \
+    autoconf \
+    libtool \
+    pkg-config \
+    libasound2-dev \
+    libfreetype6-dev \
+    libfontconfig1-dev \
+    libopengl-dev \
+    libgl1-mesa-dev \
+    libglu1-mesa-dev \
+    mesa-common-dev \
+    automake \
+    linux-libc-dev
+
+# [Optional] Uncomment this section to install additional vcpkg ports.
+RUN su vscode -c "${VCPKG_ROOT}/vcpkg install juce"
