--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -35,3 +35,4 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
 
 # [Optional] Uncomment this section to install additional vcpkg ports.
 RUN su vscode -c "${VCPKG_ROOT}/vcpkg install juce"
+RUN su vscode -c "${VCPKG_ROOT}/vcpkg install paho-mqtt"
